# qassistant

./: README.md  pyproject.toml
.github/: copilot-instructions.md
qassistant/: __init__.py  __main__.py  qassistant.desktop  viewers.py
qassistant/agent/: __init__.py  agent.py  common.py
qassistant/agent/tools/: codeinspector.py  knowledgebase.py  memory.py  pythonshell.py  utils.py
qassistant/gui/: __init__.py  application.py  settings.py  utils.py  widgets.py  workspaceview.py
tests/: __init__.py  test_agent.py  test_agent_api.py  test_codeinspector.py  test_gui.py  test_tools.py  test_widgets.py
