[project]
name = "qassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bokeh>=3.9.0",
    "click>=8.3.1",
    "github-copilot-sdk>=0.1.32",
    "griffe>=2.0.2",
    "ipython>=9.11.0",
    "jupyter>=1.1.1",
    "keyring>=25.7.0",
    "markdown>=3.10.2",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "pygments>=2.19.2",
    "pyside6>=6.10.2",
    "pyyaml>=6.0",
    "qtawesome>=1.4.1",
]

[project.entry-points."mcp-servers"]
codeinspector = "qassistant.agent.tools.codeinspector:main"
